--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Lawrence the Analyst</a>
+						<a href="generic.html" class="logo">Lawrence the Analyst</a>
 					</header>
 
 				<!-- Nav -->
