--- a/generic.html
+++ b/generic.html
@@ -69,6 +69,9 @@
 								<section class="alt">
 									<h3>B.sc Degree</h3><a href=""></a>
 									<p><a href="https://www.credly.com/badges/08f01aa8-31f2-4e2b-9575-5ac3c2fa27d9?source=linked_in_profile">Bachalor's Degree in Computer Science</a></p>
+									<section>
+										<h3>Post Graduate Diploma</h3><a href=></a>
+										<p><a href="https://www.linkedin.com/school/cape-breton-university/">Business Analytics</a></p>
 								<section>
 									<h3>Scrum</h3><a href=></a>
 									<p><a href="https://c46e136a583f7e334124-ac22991740ab4ff17e21daf2ed577041.ssl.cf1.rackcdn.com/Certificate/ScrumFundamentalsCertified-LawrenceAdigwe-997669.pdf">Scrum fundamentals</a></p>
