--- a/index.html
+++ b/index.html
@@ -237,4 +237,9 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+<!-- Copyright -->
+<div id="copyright"> 
+	<ul><li>&copy; 2023</li><li> <a href="https://www.linkedin.com/in/lawrence-adigwe/">Lawrence the Analyst</a></li></ul>
+</div>
+
 </html>
