--- a/generic.html
+++ b/generic.html
@@ -27,7 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">Projects</a></li>
 							<li class="active"><a href="generic.html">About Me</a></li>
-							<!---<li><a href="elements.html">Elements Reference</a></li>-->
+							<!---remove----<li><a href="elements.html">Elements Reference</a></li>---remove-->
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/lawrence-adigwe/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
@@ -111,10 +111,7 @@
 						</section>
 					</footer>
 
-				<!-- Copyright -->
-					<div id="copyright"> 
-						<ul><li>&copy; 2023</li><li> <a href="https://www.linkedin.com/in/lawrence-adigwe/">Lawrence the Analyst</a></li></ul>
-					</div>
+				
 
 			</div>
 
@@ -128,4 +125,8 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+	<!-- Copyright -->
+	<div id="copyright"> 
+		<ul><li>&copy; 2023</li><li> <a href="https://www.linkedin.com/in/lawrence-adigwe/">Lawrence the Analyst</a></li></ul>
+	</div>
 </html>
